--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
+    <div class="hero"></div>
     <script src = './src/main.js'></script>
 </body>
 </html>
