--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
-    <div class="hero"></div>
+    <div class="hero">
+        <h3>Coming Soon! </h3>
+        <h1>OurBrand New<br>Website Is On It's Way</h1>
+        <p>Subscribe for more details.</p>
+    </div>
     <script src = './src/main.js'></script>
 </body>
 </html>
