--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <h3>Coming Soon! </h3>
         <h1>OurBrand New<br>Website Is On It's Way</h1>
         <p>Subscribe for more details.</p>
+        <form>
+            <input type="email"  name = "Email" placeholder="Your email id" required>
+            <button type="submit"><img src="./src/img/send-icon.png" width="30px" alt=""></button>
+        </form>
     </div>
     <script src = './src/main.js'></script>
 </body>
