--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <input type="email"  name = "Email" placeholder="Your email id" required>
             <button type="submit"><img src="./src/img/send-icon.png" width="30px" alt=""></button>
         </form>
+        <span>Thank You For Subscribing!</span>
     </div>
     <script src = './src/main.js'></script>
 </body>
